--- a/index.css
+++ b/index.css
@@ -100,7 +100,11 @@
     text-align: justify;
     line-height: 25px;
 }
-
+.information-body-paragraphs-textarea-strong{
+    font-style: italic;
+    font-weight: 800;
+    color: var(--yufo);
+}
 
 
 .picture-container{
