--- a/asset/css/activity/activity.css
+++ b/asset/css/activity/activity.css
@@ -8,11 +8,15 @@
 }
 
 .activity-container-content-holder{
-    width: 95%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
+}
+.activity-container-content-holder-filter-a{
+    font-size: 20px;
+    color: var(--purple);
 }
 .activity-container-content-holder-filter{
     width: 100%;
@@ -64,36 +68,119 @@
     margin-top: 20px;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+    /* flex-wrap: wrap; */
+    justify-content: flex-start;
     align-items: center;
 }
 .activity-container-content-holder-academic-container-each{
-    width: 40%;
+    width: 45%;
+    height: 350px;
     padding: 10px;
     margin: 10px 10px;
-    border: dashed 2px var(--revhead);
+    /* border: dashed 2px var(--revhead); */
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
 }
-.activity-container-content-holder-academic-container-each-strong{
-    margin-top: 10px;
-    padding-top: 10px;
-    border-top: dashed 2px var(--revhead);
+.activity-container-content-holder-academic-container-each-strongholder{
     width: 100%;
-    text-align: left;
+    border-top: dashed 2px var(--revhead);
+    margin: 5px 0px;
+    padding: 5px 0px;
+    min-height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.activity-container-content-holder-academic-container-each-strong{    
+    color: var(--revhead);
+    font-size: 16px;
+    width: 100%;
+    text-align: center;
 }
 .activity-container-content-holder-academic-container-each-p{
-    width: 100%;
+    font-size: 18px;
+    color: var(--revhead);
+    padding: 10px;
     text-align: justify;
 }
-.activity-container-content-holder-academic-container-each-a{
-    width: 100%;
-    text-align: left;
+.activity-container-content-holder-academic-container-each-img {
+    width: 100%;    
+    height: auto; 
+    object-fit: contain; 
+    max-width: 300px; 
+    min-height: 250px; 
+    max-height: 250px; 
 }
+
+.activity-container-content-holder-academic-container-each-a{
+    color: var(--purple);
+}
+.activity-container-content-holder-academic-container-each-pa{
+    width: 95%;
+    text-align: right;
+    font-size: 14px;
+}
+.activity-timestamp{
+    width: 95%;
+    color: var(--revhead);
+    text-align: left;
+    font-size: 15px;
+}
+
+
+
+
+.flip-container {
+    perspective: 1200px; /* Creates depth for the 3D flip */
+    cursor: pointer;
+}
+
+.activity-flipper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.8s ease-in-out; /* Smooth transition */
+}
+
+.flip-container.flipped .activity-flipper {
+    transform: rotateY(180deg);
+}
+
+.activity-front, .activity-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: dashed 2px var(--revhead);
+    border-radius: 8px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Smooth shadow effect */
+}
+
+.activity-front {
+    background: white;
+    z-index: 2;
+}
+
+.activity-back {
+    background: white;
+    transform: rotateY(180deg);
+}
+
+/* Smooth shadow effect when flipping */
+.flip-container.flipped .activity-front,
+.flip-container.flipped .activity-back {
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
+}
+
 
 
 
@@ -136,7 +223,7 @@
 
 
 }
-@media screen and (min-width: 464px) and (max-width: 770px) {
+/* @media screen and (min-width: 464px) and (max-width: 770px) {
     .activity-container-content-h1{
         margin: 0;
         margin-top: 20px;
@@ -168,12 +255,15 @@
     .activity-container-content-holder-academic-container-each-a{
         font-size: 15px;
     }
-}
+} */
 
-@media screen and (max-width: 463px){
+@media screen and (max-width: 770px){
     .activity-container-content-holder-academic-container-each{
         width: 90%;
         
+    }
+    .activity-container-content-holder-academic-container{
+        flex-wrap: wrap;
     }
     .activity-container-content-h1{
         margin: 0;
