--- a/index.css
+++ b/index.css
@@ -216,11 +216,15 @@
     justify-content:center;
     align-items: center;
 }
+.information-body-cards-aaa{
+    text-decoration: none;
+    width: 45%;
+    margin: 0px 10px;
+}
 .information-body-card {
     cursor: pointer;
-    width: 45%;
+    width: 100%;
     font-size: 16px;
-    margin: 0px 10px;
     border: dashed 2px var(--black);
     background-color: var(--peste);
     box-shadow: 2px 2px 10px var(--black);
@@ -459,8 +463,8 @@
         justify-content: flex-start;
         align-items: center;
     }
-    .information-body-card{
-        width: 70%;
+    .information-body-cards-aaa {
+        width:90%;
         margin: 10px;
     }
     .picture-container-tabletmobile{
