--- a/asset/css/activity.css
+++ b/asset/css/activity.css
@@ -65,7 +65,7 @@
     margin-top: 20px;
     display: flex;
     flex-direction: row;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
 }
